# inscribe

./: .gitignore  Cargo.toml  Makefile  README.md  note
cep18/: Cargo.toml
cep18/src/: constants.rs  entry_points.rs  error.rs  main.rs  utils.rs
